css/main.css
/* ... */
.myColumn {
    overflow: auto; /*causes scrollbars*/
    /*border-radius: 0 0 3px 3px; causes jank with Chrome mobile 64.0.3282,137, 2018*/
}

.myColumnHeader {
    float: left;
    height: 2em;
    font-family: sans-serif;
    font-size: .8em;
    font-weight: bold;
    color: #428bca;
    background-color: #9dbfb8;
    text-align: center;
    border-radius: 6px 6px 0 0;
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    -o-transition: all 0.2s;
    box-shadow: 5px 5px 10px gray; /* may cause jank with Chrome mobile 64.0.3282,137, 2018 */
}

.myColumnHeader:hover {
    color: red;
    background-color: white;
}

.myColumn, .myColumnHeader {
    width: 49%;
}

.myColumn, #vocab {
    box-shadow: 5px 5px 10px gray; /* causes major jank with Chrome mobile 64.0.3282,137, 2018 */
    text-rendering: optimizeLegibility;
    -moz-font-feature-settings: "liga" 1, "kern" 1;
    -ms-font-feature-settings: "liga" 1, "kern" 1;
    -o-font-feature-settings: "liga" 1, "kern" 1;
    -webkit-font-feature-settings: "liga" 1, "kern" 1;
    font-feature-settings: "liga" 1, "kern" 1;
}

#vocab {
    background-color: white;
    border-radius: 6px;
}

#vocab {
    font-family: sans-serif;
    font-weight: normal;
    /*box-shadow: 5px 5px 10px gray; !* causes major jank with Chrome mobile 64.0.3282,137, 2018 *!*/
    text-rendering: optimizeLegibility;
    -moz-font-feature-settings: "liga" 1, "kern" 1;
    -ms-font-feature-settings: "liga" 1, "kern" 1;
    -o-font-feature-settings: "liga" 1, "kern" 1;
    -webkit-font-feature-settings: "liga" 1, "kern" 1;
    font-feature-settings: "liga" 1, "kern" 1;
}

.myPara, .highlighted {
    word-wrap: break-word;
    white-space: pre-wrap;
    /*padding: 9px; NO GOOD: this gives overlap in highlight bg*/
    margin: .5em;
    /*color: transparent;*/
    /*text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);*/
    height: 80vh;

    /*display: inline-block; // (not) possible fix for Safari selection highlighting, 4/07/18, after https://stackoverflow.com/a/42663876/5025060*/
}

.highlighted {
    font-style: italic;
    color: red;
    background: #d4d4d4;
    text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
}

::selection {
    background: #c5ffff;
}

::-moz-selection {
    background: #c5ffff;
}

.myButton {
    /*position: relative;*/
    font-family: sans-serif;
    font-size: .9em;
    font-weight: 400;
    line-height: 1;
    color: #428bca;
    /*text-align: center;*/
    /*white-space: nowrap;*/
    /*vertical-align: top;*/
    /*background-color: transparent;*/
    background-color: rgba(255, 255, 255, 0.4);
    border-radius: 5px;
    /*display: block;*/
    padding: 7px;
    margin: 4px;
    /*margin-bottom: 10px;*/
    /*border: 2px solid #428bca;*/
    border: 0;
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    -o-transition: all 0.2s;
    box-shadow: 4px 4px 11px gray;
}

.myButton:hover {
    color: black;
    background: white;
}

/* button moves "down" when clicked: */
.myButton:active {
    transform: translateY(6px);
}

/* button changes after click: */
.myButton:focus {
    color: black;
    background: red;
}

.iconButton, .closeIcon, .helpIcon {
    font-size: 2em;
    font-weight: bold;
    color: white;
    background-color: transparent;
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    -o-transition: all 0.2s;
    text-shadow: 4px 4px 9px #334455
}

.iconButton {
    padding: 7px;
    margin: 4px;
}

.closeIcon {
    position: fixed;
    right: 3%;
    bottom: 3%;
}

.closeButton {
    position: fixed;
    left: 3%;
    bottom: 3%;
}

.iconButton:hover, .closeIcon:hover, .closeButton:hover {
    color: red;
}

/* button moves "down" when clicked: */
.iconButton:active, .closeIcon:active, .closeButton:hover {
    transform: translate(3px, 3px);
}

/* button changes after click: */
.iconButton:focus, .closeIcon:focus, .closeButton:hover {
    color: black;
    background: red;
}

.rightButton {
    float: right;
}

.bridgeButton, .myButton {
    cursor: pointer;
}

.colInstructions {
    color: #e7e7e7;
    font-size: 2em;
    white-space: pre-line;
    font-family: sans-serif;
    font-weight: bold;
}

#leftFilePopup, #rightFilePopup {
    z-index: 30;
    position: absolute;
    display: none;
    top: 20%;
}

#leftFilePopup {
    left: 10%;
}

#rightFilePopup {
    left: 60%;
}

#topRowButtons {
    height: 4em; /* keep text within buttons */
    align-items: center;
}

/*#leftFilePopup *, #rightFilePopup * {
    font-size: initial;
}*/

#leftFileSelect, #rightFileSelect {
    font-size: 120%;
    background-color: yellow;
    font-weight: bold;
}

.vertContainer,
.horizContainer,
.container {
    display: flex;
    justify-content: space-between;
}

.vertContainer {
    flex-direction: column;
    height: 100vh;
}

.horizContainer, #vocab {
    flex-direction: row;
    margin-left: 2%;
    /*width: 96%*/
    width: 96vw;
}

.horizElement {
    margin-left: 2%;
    width: 96%
}

/********* Slider (controls) styles ***********/

.lbSlider {
    -webkit-appearance: none; /* Override default CSS styles */
    appearance: none;
    width: 75%;
    margin-top: 8px;
    height: 8px; /* Specified height */
    background: #d3d3d3;
    float: right;
}

.lbSlider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    background: #4CAF50;
    cursor: pointer;
    border-radius: 50%;
}

.lbSlider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    background: #4CAF50;
    cursor: pointer;
    border-radius: 50%;
}

.rangeLabel {
    font-family: sans-serif;
    font-weight: bold;
    margin-left: .3em;
    margin-right: .3em;
}

.lbCheckbox {
    cursor: pointer;
}
/* ... */

